how to order section added

--- a/index.html
+++ b/index.html
@@ -51,48 +51,78 @@
 
       <!--SECTION 2 - DESPRE NOI-->
       <section id="section2">
-         <div id="about-us">
-            <h1>DESPRE NOI</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam deleniti dolore culpa veritatis laboriosam mollitia incidunt fugit molestiae harum asperiores.</p>
-         </div>
-         <div class="about-us-cards">
-            <div class="card1">
-               <h3>Cine suntem?</h3>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, in.</p>
+         <section>
+            <div id="about-us">
+               <h1>DESPRE NOI</h1>
+               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam deleniti dolore culpa veritatis laboriosam mollitia incidunt fugit molestiae harum asperiores.</p>
             </div>
-            <div class="card2"> 
-               <h3>Ce livram?</h3>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus, quisquam!</p> 
+            <div class="about-us-cards">
+               <div class="card1">
+                  <h3>Cine suntem?</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, in.</p>
+               </div>
+               <div class="card2"> 
+                  <h3>Ce livram?</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus, quisquam!</p> 
+               </div>
+               <div class="card3">
+                  <h3>Ce oferim?</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, corrupti.</p>
+               </div>
+               <div class="card4">
+                  <h3>De ce noi?</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, quae.</p>
+               </div>
             </div>
-            <div class="card3">
-               <h3>Ce oferim?</h3>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, corrupti.</p>
+         </section>
+      </section>
+
+      <!--SECTION 3 - PRODUSE-->
+      <section id="section3">
+         <h1>DESCOPERA PRODUSELE NOASTRE</h1>
+         <div class="products">
+            <div class="products-card">
+               <img src="img/sirop-soc-top.jpeg" alt="sirop" class="products-img">
+               <div class="overlay">
+                  <div class="text">Hello World</div>
+               </div>
             </div>
-            <div class="card4">
-               <h3>De ce noi?</h3>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, quae.</p>
+            <div class="products-card">
+               <img src="img/sirop-menta.jpeg" alt="sirop" class="products-img">
+               <div class="overlay">
+                  <div class="text">Hello World</div>
+               </div>
             </div>
          </div>
       </section>
 
-   <!--SECTION 3 - PRODUSE-->
-   <section id="section3">
-      <h1>DESCOPERA PRODUSELE NOASTRE</h1>
-      <div class="products">
-         <div class="products-card">
-            <img src="img/sirop-soc-top.jpeg" alt="sirop" class="products-img">
-            <div class="overlay">
-               <div class="text">Hello World</div>
+      <section id="section4"><!--SECTION 4 - CUM COMAND--> 
+         <div class="container-hto">
+            <h2>Cum comand?</h2>
+            <div class="how-to-order">
+               <div class="hto-steps">
+                  <i class="fas fa-bullseye"></i>
+                  <h3>Pasul 1</h3>
+                  <p class="product-pres-order-paragraph">Identifici produsul pe care doresti sa-l comanzi dintre toate produsele pe care ti le oferim.</p>
+               </div>
+               <div class="hto-steps">
+                  <i class="fas fa-phone-alt"></i>
+                  <h3>Pasul 2</h3>
+                  <p class="product-pres-order-paragraph">Ne contactezi pentru a plasa comanda folosind formularul de contact de mai jos sau numarul de telefon.</p>
+               </div>
+               <div class="hto-steps">
+                  <i class="fas fa-box-open"></i>
+                  <h3>Pasul 3</h3>
+                  <p class="product-pres-order-paragraph">Astepti sa ajunga comanda plasata la tine. Noi promitem sa o procesam in cel mai scurt timp.</p>
+               </div>
+               <div class="hto-steps">
+                  <i class="far fa-smile-beam"></i>
+                  <h3>Pasul 4</h3>
+                  <p class="product-pres-order-paragraph">Savurezi siropurile proaspete, cu gust unic si rafinat, pe care tocmai le-ai primit.</p>
+               </div>
             </div>
-         </div>
-         <div class="products-card">
-            <img src="img/sirop-menta.jpeg" alt="sirop" class="products-img">
-            <div class="overlay">
-               <div class="text">Hello World</div>
-            </div>
-         </div>
-      </div>
-   </section>
+         </div>      
+      </section><!--SECTION 4 - CUM COMAND-->
 
    </body>
 </html>
