start working on orders form

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
                <div class="modal-product hidden">
                   <button class="close-modal-product">&times;</button>
-                  <h3>Sirop</h3>
+                  <h3>Sirop de soc</h3>
                   <p>
                      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis, consectetur.
                   </p>
@@ -177,6 +177,40 @@
                <p>
                   Completeaza formularul de mai jos pentru a ne transmite comanda:
                </p>
+               <div class="form-container">
+                  <form action="">
+                     <p>1. Informatii pentru livrare:</p>
+                     <label for="nume">Nume:</label> <br>
+                     <input type="text" name="nume" placeholder=""> <br>
+
+                     <label for="adresa">Adresa:</label> <br>
+                     <input type="text" name="adresa" placeholder="Adresa completa (str. nr. ap.)"> <br>
+
+                     <label for="oras">Oras:</label> <br>
+                     <input type="text" name="oras" placeholder=""> <br>
+
+                     <label for="judet">Judet:</label> <br>
+                     <input type="text" name="judet" placeholder=""> <br>
+
+                     <label for="telefon">Telefon:</label> <br>
+                     <input type="number" name="telefon" placeholder="" required> <br>
+
+                     <p>2. Comanda ta de sirop:</p>
+                     <label for="soc">Sirop de soc (sticla 1l):</label> <br>
+                     <input type="number" name="soc" placeholder="Numar de sticle"> <br>
+
+                     <label for="soc">Sirop de menta olandeza (sticla 0.5l):</label> <br>
+                     <input type="number" name="menta" placeholder="Numar de sticle"> <br>
+
+                     <label for="soc">Sirop de muguri de brad argintiu (sticla 0.5l):</label> <br>
+                     <input type="number" name="brad" placeholder="Numar de sticle"> <br>
+
+                     <p>3. Alte informatii:</p>
+                     <label for="telefon">Observatii sau alte informatii:</label> <br>
+                     <textarea type="textarea" name="telefon" placeholder="Lasa-ne mesajul tau aici..." ></textarea>
+
+                  </form>
+               </div>
             </div>
             <div class="overlay-modal-form hidden"></div>
          </div>
