--- a/index.html
+++ b/index.html
@@ -46,24 +46,45 @@
          <section>
             <div id="about-us">
                <h1>DESPRE NOI</h1>
-               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam deleniti dolore culpa veritatis laboriosam mollitia incidunt fugit molestiae harum asperiores.</p>
+               <p>Descoperiti in randurile ce urmeaza portretul nostru, asa cum reiasa el din perspectiva noastra. Putin mai jos veti avea ocazia sa descoperiti acelasi portret asa cum l-au zugravit clientii nostri. 
+               <br> Pana acolo, haideti sa ne cunoastem mai bine:</p>
             </div>
             <div class="about-us-cards">
                <div class="card1">
                   <h3>Cine suntem?</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, in.</p>
+                  <p>
+                     O FAMILIE PASIONATA
+                     <br><br>
+                     Suntem o familie pasionata de tot ce este natural si autentic.
+                  </p>
                </div>
                <div class="card2"> 
                   <h3>Ce livram?</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus, quisquam!</p> 
+                  <p>
+                     SIROPURI NATURALE 
+                     <br> <br>
+                     Livram siropuri naturale, realizate din flori si fructe atent culese, din zonele nepoluate de deal si munte ale Transilvaniei.
+                  </p> 
                </div>
                <div class="card3">
                   <h3>Ce oferim?</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, corrupti.</p>
+                  <p>
+                     SIGURANTA CALITATII 
+                     <br> <br>
+                     Aspectul esential de care tinem cont atunci cand culegem / achizitionam materia prima pentru siropurile pe care le producem este calitatea fiecarui ingredient folosit.
+                  </p>
                </div>
                <div class="card4">
                   <h3>De ce noi?</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, quae.</p>
+                  <p>
+                     SIGURANTA SI CALITATE
+                     <br><br>
+                     Modul nostru de gandire este foarte simplu:
+                     <br> 1. comanzi, 
+                     <br> 2. gusti,
+                     <br> 3. iti place &#8594; pastrezi
+                     <br> 4. nu iti place &#8594; pastrezi si primesti banii inapoi
+                  </p>
                </div>
             </div>
          </section>
